day1/lb_test/helloworld.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: hello-world
 namespace: default
spec:
 replicas: 10
 selector:
  matchLabels:
   app: hello-world
 template:
  metadata:
   labels:
    app: hello-world
  spec:
   containers:
    - name: hello-world
      image: docker.io/bashofmann/rancher-demo:1.0.0
      imagePullPolicy: Always
      ports:
       - containerPort: 8080
         name: web
         protocol: TCP
      readinessProbe:
       httpGet:
        port: web
        path: /
