day1/lb_test/helloworld_node.yml
apiVersion: v1
kind: Service
metadata:
 name: hello-world-svc
 namespace: default
spec:
 type: NodePort
 selector:
  app: hello-world
 ports:
  - name: web
    port: 8080
    targetPort: web
    nodePort: 31111
